# rework_ui

./: .build.yml  .gitlab-ci.yml  .hgignore  .hgtags  CHANGELOG  Makefile  README.md  pyproject.toml  setup.py
elm/: elm.json
elm/src/: Decoder.elm  InfiniteScroll.elm  Info.elm  Log.elm  Logview.elm  Main.elm  Metadata.elm  Type.elm  View.elm
elm/src/ReworkUI/: Decoder.elm  Metadata.elm  Type.elm  View.elm
elm/src/reworkUI/: Decoder.elm  Type.elm  View.elm
elm/tests/: DecoderTest.elm  Suite.elm
rework_ui/: app.py  blueprint.py  cli.py  helper.py  schema.py  schema.sql  taskstable.py
rework_ui/rui_static/: style.css  util.js
rework_ui/rui_templates/: home.html  rui_base.html  rui_home.html  taskerror.html  taskinfo.html  tasklogs.html
tests/: conftest.py  tasks.py  test_rui.py
tests/data/: monitors-table-1-task.html  monitors-table.html  services.html  tasks-table-error.html  tasks-table-uranus.html  tasks-table.html
